--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     list-style: none;
     box-sizing: border-box;
 }
+body {
+    background-color: rgb(1, 17, 23);
+    overflow: scroll;
+  }  
 a{
     text-decoration: none;
 }
@@ -438,4 +442,70 @@ li{
         height: 57vh;
     }
 }
+
+
+
+
+
+/*    PAGINA SOBRE      */
+.about__img{
+    width: 100px;
+    border-radius: .5rem;
+    margin-top: -40px;
+    justify-self: center;
+    align-self: center;
+  }
+  
+  .about__description{
+    text-align: center;
+    margin-bottom: var(--mb-2-5);
+  }
+  
+  .about__info{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2-5);
+  }
+  
+  .about__info-title{
+    font-size: var(--h2-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+  }
+  
+  .about__info-name{
+    font-size: var(--smaller-font-size);
+  }
+  
+  .about__info-title,
+  .about__info-name{
+    display: block;
+    text-align: center;
+  }
+  
+  .about__buttons{
+    display: flex;
+    justify-content: center;
+  }
+
+  .section {
+    padding: 2rem 0 4rem;
+  }
+  
+  .section__title {
+    font-size: var(--h1-font-size);
+    color: var(--title-color);
+  }
+  
+  .section__subtitle {
+    display: block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-3);
+  }
+  
+  .section__title, 
+  .section__subtitle {
+    text-align: center;
+  }
+
 /* End */
